@@ -288,8 +288,7 @@ void ImportFeature::start() {
 
   int err = TRI_ERROR_NO_ERROR;
   auto versionString = _httpClient->getServerVersion(&err);
-  auto dbName = client->databaseName();
-  bool createdDatabase = false;
+  auto const dbName = client->databaseName();
 
   auto successfulConnection = [&]() {
     std::cout << ClientFeature::buildConnectedMessage(_httpClient->getEndpointSpecification(), versionString, /*role*/ "", /*mode*/ "", client->databaseName(), client->username()) << std::endl;
@@ -338,12 +337,15 @@ void ImportFeature::start() {
       FATAL_ERROR_EXIT();
     }
 
-    successfulConnection();
-
     // restore old database name
     client->setDatabaseName(dbName);
-    versionString = _httpClient->getServerVersion(nullptr);
-    createdDatabase = true;
+    err = TRI_ERROR_NO_ERROR;
+    versionString = _httpClient->getServerVersion(&err);
+
+    if (err != TRI_ERROR_NO_ERROR) {
+      // disconnect, as this will make the import abort
+      _httpClient->disconnect();
+    }
   }
 
   if (!_httpClient->isConnected()) {
@@ -353,11 +355,13 @@ void ImportFeature::start() {
     LOG_TOPIC("034c9", FATAL, arangodb::Logger::FIXME) << _httpClient->getErrorMessage() << "'";
     FATAL_ERROR_EXIT();
   }
+  
+  TRI_ASSERT(client->databaseName() == dbName);
 
   // successfully connected
-  if (!createdDatabase) {
-    successfulConnection();
-  }
+  // now print connection info
+  successfulConnection();
+
   _httpClient->disconnect();  // we do not reuse this anymore
 
   SimpleHttpClientParams params = _httpClient->params();
